update materials for workshop

--- a/WS/WPS_Emu_hello.ipynb
+++ b/WS/WPS_Emu_hello.ipynb
@@ -12,8 +12,11 @@
    "metadata": {},
    "source": [
     "To execute code in a notebook cell and move to the next, use  <font color='blue'>*Shift + Enter*</font>  combination   \n",
+    "When the cell is running, you see ```[*]``` left from it   \n",
+    "You may move to another cell, but it will in a queue, until privious is finished   \n",
+    "Please, follow cell-by-cell and read the comments and remarks   \n",
     "To execute the cell, and stay in it, use  <font color='blue'>*Ctrl + Enter*</font>   \n",
-    "You can always stop the notebook by pressing 'interrupt kernel' button and restart it  \n",
+    "You can always stop the notebook by pressing 'interrupt kernel' button (black square in menu) and restart it (next to it)  \n",
     "All the modules will be unloaded"
    ]
   },
@@ -27,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +241,7 @@
        " 'version']"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -280,22 +283,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8090/wpsoutputs/emu/bf5f8f26-26a7-11e8-b582-d89ef3118394.xml \n",
+      "http://localhost:8090/wpsoutputs/emu/8aa3a7a8-2c48-11e8-86e1-d89ef3118394.xml \n",
       "\n",
-      "<wps:ExecuteResponse xmlns:gml=\"http://www.opengis.net/gml\" xmlns:ows=\"http://www.opengis.net/ows/1.1\" xmlns:wps=\"http://www.opengis.net/wps/1.0.0\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.opengis.net/wps/1.0.0 http://schemas.opengis.net/wps/1.0.0/wpsExecute_response.xsd\" service=\"WPS\" version=\"1.0.0\" xml:lang=\"en-US\" serviceInstance=\"http://localhost:8094/wps?service=WPS&amp;request=GetCapabilities\" statusLocation=\"http://localhost:8090/wpsoutputs/emu/bf5f8f26-26a7-11e8-b582-d89ef3118394.xml\">\n",
+      "<wps:ExecuteResponse xmlns:gml=\"http://www.opengis.net/gml\" xmlns:ows=\"http://www.opengis.net/ows/1.1\" xmlns:wps=\"http://www.opengis.net/wps/1.0.0\" xmlns:xlink=\"http://www.w3.org/1999/xlink\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.opengis.net/wps/1.0.0 http://schemas.opengis.net/wps/1.0.0/wpsExecute_response.xsd\" service=\"WPS\" version=\"1.0.0\" xml:lang=\"en-US\" serviceInstance=\"http://localhost:8094/wps?service=WPS&amp;request=GetCapabilities\" statusLocation=\"http://localhost:8090/wpsoutputs/emu/8aa3a7a8-2c48-11e8-86e1-d89ef3118394.xml\">\n",
       "  <wps:Process wps:processVersion=\"1.5\">\n",
       "    <ows:Identifier>hello</ows:Identifier>\n",
       "    <ows:Title>Say Hello</ows:Title>\n",
       "    <ows:Abstract>Just says a friendly Hello.Returns a literal string output with Hello plus the inputed name.</ows:Abstract>\n",
       "  </wps:Process>\n",
-      "  <wps:Status creationTime=\"2018-03-13T11:17:35Z\">\n",
+      "  <wps:Status creationTime=\"2018-03-20T15:11:11Z\">\n",
       "    <wps:ProcessSucceeded>PyWPS Process Say Hello finished</wps:ProcessSucceeded>\n",
       "  </wps:Status>\n",
       "  <wps:ProcessOutputs>\n",
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -358,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -509,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +520,7 @@
      "output_type": "stream",
      "text": [
       "Click it!\n",
-      "reference = http://localhost:8090/wpsoutputs/emu/17fe9e5e-26aa-11e8-b582-d89ef3118394/out.txt\n"
+      "reference = http://localhost:8090/wpsoutputs/emu/a67af544-2c48-11e8-86e1-d89ef3118394/out.txt\n"
      ]
     }
    ],
@@ -537,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +582,7 @@
      "output_type": "stream",
      "text": [
       "Click it!\n",
-      "reference = http://localhost:8090/wpsoutputs/emu/20795d62-26aa-11e8-b582-d89ef3118394/out.txt\n"
+      "reference = http://localhost:8090/wpsoutputs/emu/ac39d4c8-2c48-11e8-86e1-d89ef3118394/out.txt\n"
      ]
     }
    ],
