add preliminary csv file for later D3js visio

--- a/WS/WPS_Hum_OWSLIB.ipynb
+++ b/WS/WPS_Hum_OWSLIB.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
        "'Hummingbird 0.5_dev'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
      "output_type": "stream",
      "text": [
       "Check the results!\n",
-      "http://localhost:8090/wpsoutputs/hummingbird/aea89834-2c52-11e8-86e1-d89ef3118394/nc_dump.txt\n"
+      "http://localhost:8090/wpsoutputs/hummingbird/dfdd7390-c7b9-11e8-8788-d89ef3118394/nc_dump.txt\n"
      ]
     }
    ],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -353,8 +353,8 @@
      "text": [
       "You may click and download tar archive with all the results\n",
       "Or download one file and view it with ncview\n",
-      "http://localhost:8090/wpsoutputs/hummingbird/b364e4cc-2c52-11e8-86e1-d89ef3118394/tmp6BA_ZQ.nc\n",
-      "http://localhost:8090/wpsoutputs/hummingbird/b364e4cc-2c52-11e8-86e1-d89ef3118394/tmpaLzZnp.tar\n"
+      "http://localhost:8090/wpsoutputs/hummingbird/e3f10334-c7b9-11e8-8788-d89ef3118394/tmp2id4SS.nc\n",
+      "http://localhost:8090/wpsoutputs/hummingbird/e3f10334-c7b9-11e8-8788-d89ef3118394/tmpxNvSf4.tar\n"
      ]
     }
    ],
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1033,6 +1033,8 @@
       "\n",
       "analogs_compare \t : Search for days with analogue pressure pattern for reanalyses data sets \n",
       "\n",
+      "analogs_re2re \t : Search for days with analogue pressure pattern for NCEP in 20CRV2c reanalyses data sets \n",
+      "\n",
       "analogs_viewer \t : Visualisation of text output of analogue process \n",
       "\n",
       "analogs_cta \t : Search for days with analogue pressure pattern for reanalyses data sets \n",
@@ -1040,6 +1042,14 @@
       "simple_plot \t : Returns a nice and simple plot. \n",
       "\n",
       "pythonanattribution \t : Attributioms with analogues \n",
+      "\n",
+      "regrsub \t : CDO Remapping and Subsetting of NetCDF File(s) \n",
+      "\n",
+      "localdims_rea \t : Local dimentions and persistence \n",
+      "\n",
+      "localdims_mod \t : Calculation of local dimentions and persistence (based on climate model data) \n",
+      "\n",
+      "FARallnat \t : non-stationnary FAR statistical analysis using CMIP5 data \n",
       "\n"
      ]
     }
@@ -1247,21 +1257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/homel/nkadyg/.conda/envs/blackswan/lib/python2.7/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n",
       "/homel/nkadyg/.conda/envs/blackswan/lib/python2.7/site-packages/matplotlib/__init__.py:1405: UserWarning: \n",
       "This call to matplotlib.use() has no effect because the backend has already\n",
       "been chosen; matplotlib.use() must be called *before* pylab, matplotlib.pyplot,\n",
       "or matplotlib.backends is imported for the first time.\n",
       "\n",
       "  warnings.warn(_use_error_msg)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Could not load xarray\n"
      ]
     }
    ],
@@ -1348,33 +1363,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:PYWPS:Start ocgis module call function\n",
+      "INFO:PYWPS:Execute ocgis module call function\n",
+      "INFO:PYWPS:OcgOperations set\n",
+      "INFO:PYWPS:ocgis module call as ops.execute()\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/homel/nkadyg/birdhouse/blackswan/WS/5913beb6-2c53-11e8-86e1-d89ef3118394.nc\n"
+      "/homel/nkadyg/birdhouse/blackswan/WS/f4f47052-c7ba-11e8-8788-d89ef3118394.nc\n"
      ]
     }
    ],
    "source": [
     "### Call OCGIS with wrapping spatial wrapping (ocgis works without file://):\n",
     "good_lat=call(resource=res_loc, spatial_wrapping='wrap')\n",
+    "#res_loc='/home/scratch01/hadnane/ERAI/1980/msl.198001.ashei.GLOBAL_3.nc'\n",
+    "#good_lat=call(resource=res_loc, spatial_wrapping='wrap')\n",
     "print good_lat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "http://localhost:8090/wpsoutputs/blackswan/5cd7eef0-2c53-11e8-86e1-d89ef3118394/myplot_5cd7eef1-2c53-11e8-86e1-d89ef3118394.png\n",
+      "http://localhost:8090/wpsoutputs/blackswan/1678c2a0-c7bb-11e8-8788-d89ef3118394/myplot_1678c2a1-c7bb-11e8-8788-d89ef3118394.png\n",
       "Compare result!\n"
      ]
     }
